[package]
name = "zenith-opt"
version = "0.0.1"
authors = ["João Nuno Matos <me@joaonmatos.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A generic optimization library"
readme = "README.md"
website = "https://github.com/joaonmatos/zenith-opt"
repository = "https://github.com/joaonmatos/zenith-opt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
